Bug 477880 - System Monitor applet popup is tremendously enormous and non-resizeable
Summary: System Monitor applet popup is tremendously enormous and non-resizeable
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-02 00:24 UTC by Ridge
Modified: 2023-12-22 19:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Comparison between 5.90 and 5.27 (312.47 KB, image/png)
2023-12-02 00:24 UTC, Ridge
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ridge 2023-12-02 00:24:40 UTC
Created attachment 163733 [details]
Comparison between 5.90 and 5.27

SUMMARY
The System Monitor Sensor popup when docked on a panel is huge, and cannot be resized. It uses way too much space for the information it needs to display. Doesn't matter which Display Style it uses.

STEPS TO REPRODUCE
1. Setup System Monitor Sensor to show some exciting information.
2. Dock it to a panel.
3. Click on it.

OBSERVED RESULT
Gargantuan popup! And no way to make it smaller.

EXPECTED RESULT
A small, sweet, perhaps even cute, but resizeable popup.

SOFTWARE/OS VERSIONS
Linux: 6.6.3
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
A comparison between Beta 1 and 5.27.9 is attached.
Comment 1 Ridge 2023-12-02 05:44:25 UTC
Another thing I tried was to delete plasma-org.kde.plasma.desktop-appletsrc, restart Plasma, and make a new applet, but the problem persisted.
Comment 2 Bug Janitor Service 2023-12-22 14:08:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1021
Comment 3 Bug Janitor Service 2023-12-22 17:38:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1022
Comment 4 Arjen Hiemstra 2023-12-22 18:13:36 UTC
Git commit f2c451650df19ef41f6364196bc68052773e77b6 by Arjen Hiemstra.
Committed on 22/12/2023 at 18:38.
Pushed by davidedmundson into branch 'master'.

Fix PopupPlasmaWindow::effectivePopupDirection being the wrong way around

When a popup would open above a panel this would result in
`effectivePopupDirection` being `Qt::BottomEdge` and similarly for the
other edges. Due to this, the condition the code that applied resizing
would disable the incorrect edge (the one on the opposite of the edge on
the panel), breaking popup resizing.
Related: bug 478764

M  +8    -8    src/plasmaquick/popupplasmawindow.cpp

https://invent.kde.org/plasma/libplasma/-/commit/f2c451650df19ef41f6364196bc68052773e77b6
Comment 5 Marco Martin 2023-12-22 19:01:02 UTC
Git commit 912701a48f9a95c9a1a9c5218678fe3b6a99f68f by Marco Martin.
Committed on 22/12/2023 at 20:00.
Pushed by mart into branch 'master'.

cast to int before checking > 0

otherise for very big values.. we'll get a negative value afterwards

M  +6    -6    src/plasmaquick/appletpopup.cpp

https://invent.kde.org/plasma/libplasma/-/commit/912701a48f9a95c9a1a9c5218678fe3b6a99f68f