cast to int before checking > 0

otherise for very big values.. we'll get a negative value afterwards

BUG:477880