src/plasmaquick/appletpopup.cpp
@@ -259,11 +259,11 @@ QSize LayoutChangedProxy::maximumSize() const
 {
     QSize size(QWINDOWSIZE_MAX, QWINDOWSIZE_MAX);
     qreal width = m_maximumWidth.read().toReal();
-    if (qIsFinite(width) && width > 0) {
+    if (qIsFinite(width) && int(width) > 0) {
         size.setWidth(width);
     }
     qreal height = m_maximumHeight.read().toReal();
-    if (qIsFinite(height) && height > 0) {
+    if (qIsFinite(height) && int(height) > 0) {
         size.setHeight(height);
     }
 
@@ -294,11 +294,11 @@ QSize LayoutChangedProxy::minimumSize() const
 {
     QSize size(0, 0);
     qreal width = m_minimumWidth.read().toReal();
-    if (qIsFinite(width) && width > 0) {
+    if (qIsFinite(width) && int(width) > 0) {
         size.setWidth(width);
     }
     qreal height = m_minimumHeight.read().toReal();
-    if (qIsFinite(height) && height > 0) {
+    if (qIsFinite(height) && int(height) > 0) {
         size.setHeight(height);
     }
 
